--- a/inc/customizer/custom-controls/assets/css/unminified/settings-group.css
+++ b/inc/customizer/custom-controls/assets/css/unminified/settings-group.css
@@ -178,6 +178,10 @@
   padding-right: 15px;
   box-sizing: border-box;
 }
+.ast-control-wrap .ast-color-picker-alpha {
+    margin-left: -5px;
+    margin-right: -5px;
+}
 
 .ast-field-settings-modal .customize-control:first-child {
   margin-top: 15px;
